--- a/package.json
+++ b/package.json
@@ -6,13 +6,19 @@
     "start": "next start"
   },
   "dependencies": {
+    "@thirdweb-dev/react": "^2.3.11",
+    "@thirdweb-dev/sdk": "^2.2.19",
+    "ethers": "^5.6.8",
     "next": "latest",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
+    "react-vertical-timeline-component": "^3.5.2"
   },
   "devDependencies": {
     "@types/node": "17.0.4",
     "@types/react": "17.0.38",
+    "@types/react-vertical-timeline-component": "^3.3.3",
     "autoprefixer": "^10.4.0",
     "postcss": "^8.4.5",
     "prettier": "^2.5.1",
